# document-date-finder-service

./: .gitignore  README.md  flake.nix  pyproject.toml  render.yaml
client/: package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.css  App.tsx  index.css  index.html
client/src/components/: Calendar.tsx  DateListing.tsx  DocumentDialog.tsx  SuperDocComponent.tsx  UploadForm.tsx  UploadFormOrigin.tsx
client/src/components/ui/: dialog.tsx  table.tsx  tooltip.tsx
client/src/lib/: superdoc-matches-markup.ts  utils.ts
client/src/types/: found-dates.ts
server/: __init__.py  env.py  main.py  parse_docx.py
test/: test_docx_date_extraction.py
